# shelfr

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAMFAST_PROJECT_PLAN.md  MIGRATION_BACKLOG.md  Makefile  P0_UPGRADE_COMPLETE.md  P1_SH_LIBRARY_COMPLETE.md  PACKAGE_UPGRADE_PLAN.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  config.yaml.example  pyproject.toml  qbittorrent_hl_rescue.py
.circleci/: config.yml
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
config/: audiobook_categories.json  categories.json  mam_categories_reference.json  naming.json
docs/: .api_docs_metadata.json  AUDIOBOOKSHELF_API.md  AUDIOBOOKSHELF_FUTURE.md  AUDIOBOOKSHELF_IMPORT_PLAN.md  CLI_AUDIT_REPORT.md  CLI_REFACTORING_PLAN.md  IMPROVEMENTS_PLAN.md  LIBATION_CLI.md  LIBATION_WRAPPER_REVIEW.md  MIGRATION_BACKLOG.md  NAMING_PLAN.md  PACKAGE_UPGRADE_PLAN.md  README.md  SHELFR_REBRAND_PLAN.md  STATE_HARDENING_PLAN.md  UNKNOWN_ASIN_HANDLING.md  VALIDATION_PLAN.md
docs/archive/: NAMING_PLAN_ORIGINAL.md  P0_INTEGRATION_COMPLETE.md  P0_UPGRADE_COMPLETE.md  P1_SH_LIBRARY_COMPLETE.md  PRODUCTION_SAFETY_IMPROVEMENTS.md  REFACTORING_SUMMARY.md
docs/audiobookshelf/: ABS_RENAME_TODO.md  AUDIOBOOKSHELF_API.md  AUDIOBOOKSHELF_IMPORT_PLAN.md  CLEANUP_PLAN.md  TRUMPING.md  UNKNOWN_ASIN_HANDLING.md
docs/audiobookshelf/api/: _filtering.md  _me.md  _notifications.md  _schemas.md
docs/audnex/api/: AUDNEX_README.md
docs/cli/: AUDIT_REPORT.md  AUDIT_VERIFICATION.md  CLI_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  mkbrr.md
docs/implementation/: IMPROVEMENTS_PLAN.md  MIGRATION_BACKLOG.md  MKBRR_WRAPPER_PLAN.md  PACKAGE_UPGRADE_PLAN.md  STATE_HARDENING_PLAN.md  TEXT_EDITOR_PLAN.md  VALIDATION_PLAN.md  json-sidecar-discovery.md
docs/libation/: CLI.md  WRAPPER_REVIEW.md
docs/mam/: SUPPORTED_BBCODE.md
docs/reference/audiobookshelf/: ABS_RENAME_TOOL.md  AUDIOBOOKSHELF_API.md  AUDIOBOOKSHELF_IMPORT.md  AUDIOBOOKSHELF_REFERENCE.md  RENAME_EDGE_CASES.md  TRUMPING.md
docs/reference/mam/: FAST_FILLOUT.md  TORRENT_SEARCH_API.md
docs/reference/metadata/: README.md
docs/reference/naming/: NAMING.md  NAMING_AUDNEX_NORMALIZATION.md  NAMING_FOLDER_FILE_SCHEMAS.md  NAMING_IMPLEMENTATION.md  NAMING_PIPELINE.md  NAMING_RULES.md
docs/reference/trackers/: 01-tracker-architecture.md  README.md  mam.md  red.md
samples/: README.md
scripts/: README.md  build_golden_samples.py  check_md_links.py  fetch_abs_library.py  fetch_test_data.py  find_audnex_book.py  scan_abs_library.py  test_bbcode.py
scripts/analysis/: analyze_test_data.py
scripts/data_gathering/: build_golden_samples.py  fetch_test_data.py  hardcover_enrich.py  scan_abs_library.py
scripts/dev_tools/: fetch_api_docs.py  test_bbcode.py
src/mamfast/: __init__.py  cli.py  cli_argparse.py  config.py  console.py  discovery.py  env_settings.py  hardlinker.py  libation.py  logging_setup.py  metadata.py  mkbrr.py  models.py  paths.py  qbittorrent.py  validation.py  workflow.py
src/mamfast/abs/: __init__.py  asin.py  cleanup.py  client.py  importer.py  indexer.py  metadata_builder.py  paths.py  rename.py  trumping.py
src/mamfast/cli/: __init__.py  _app.py  abs.py  diagnostics.py
src/mamfast/commands/: __init__.py  abs.py  core.py  diagnostics.py  libation.py  state.py  tools.py  utility.py
src/mamfast/schemas/: __init__.py  abs.py  abs_metadata.py  config.py  naming.py  state.py
src/mamfast/templates/: mam_description.j2  rename_report.html
src/mamfast/utils/: __init__.py  circuit_breaker.py  cmd.py  fuzzy.py  naming.py  paths.py  permissions.py  state.py  validate_naming.py
src/shelfr/: __init__.py  cli_argparse.py  cli_legacy.py  config.py  console.py  discovery.py  env_settings.py  exceptions.py  hardlinker.py  libation.py  logging_setup.py  metadata.py  mkbrr.py  models.py  paths.py  qbittorrent.py  validation.py  wizard.py  workflow.py
src/shelfr/abs/: __init__.py  asin.py  cleanup.py  client.py  importer.py  metadata_builder.py  paths.py  rename.py  trumping.py
src/shelfr/cli/: __init__.py  _app.py  _context.py  _helpers.py  abs.py  core.py  diagnostics.py  edit.py  libation.py  mam.py  mkbrr.py  state.py  tools.py
src/shelfr/commands/: __init__.py  core.py  diagnostics.py  mam.py  state.py  tools.py  utility.py
src/shelfr/metadata/: __init__.py  models.py  orchestration.py
src/shelfr/opf/: __init__.py  generator.py  helpers.py  mappings.py  schemas.py
src/shelfr/schemas/: __init__.py  abs_metadata.py  audnex.py  config.py  mkbrr.py
src/shelfr/templates/: mam_description.j2  rename_report.html  signature.j2
src/shelfr/tui/: __init__.py  app.py
src/shelfr/ui/: __init__.py  banner.py  core.py  dryrun.py  errors.py  formatting.py  icons.py  messages.py  panels.py  progress.py  tables.py  trumping.py  validation.py
src/shelfr/utils/: __init__.py  bbcode_renderer.py  cmd.py  editor.py  mini_editor.py  paths.py  preview.py  retry.py  state.py  torrent.py  validate_naming.py  validation.py
tests/: __init__.py  conftest.py  test_abs_asin.py  test_abs_cleanup.py  test_abs_client.py  test_abs_importer.py  test_abs_indexer.py  test_abs_metadata_builder.py  test_abs_paths.py  test_abs_rename.py  test_abs_schemas.py  test_audnex_schema.py  test_bbcode_signature.py  test_circuit_breaker.py  test_cli_abs.py  test_cli_libation.py  test_cli_mkbrr.py  test_cli_tools.py  test_cli_typer.py  test_config.py  test_config_schema.py  test_console.py  test_discovery.py  test_editor.py  test_env_settings.py  test_exceptions.py  test_exporters.py  test_fuzzy.py  test_golden.py  test_golden_normalization.py  test_hardlinker.py  test_input_validation.py  test_integration.py  test_libation.py  test_logging_setup.py  test_metadata.py  test_mini_editor.py  test_mkbrr.py  test_mkbrr_schemas.py  test_models.py  (+17 more)
tests/fixtures/: audnex_normalization_samples.json  golden_samples_generated.json
tests/golden/: naming_expected.json  naming_inputs.json
tools/: version.py
(+118 files in other folders)
