[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mamfast"
version = "0.1.0"
description = "Fast MAM audiobook upload automation tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "qbittorrent-api>=2024.1",
    "httpx>=0.27.0",
    "rich>=13.0",
    "pykakasi>=2.2.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "pathvalidate>=3.0",
    "rapidfuzz>=3.0",
    # P0 upgrades: Better retry logic and cross-platform paths
    "tenacity>=8.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "pre-commit>=3.0",
]

[project.scripts]
mamfast = "mamfast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mamfast"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "pykakasi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Relax type checking entirely for tests so development can proceed quickly.
# Tests can still be annotated incrementally where useful, but we don't require
# strict mypy checks across tests in local dev.
ignore_errors = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
