[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shelfr"
version = "0.2.0"
description = "Audiobook library automation - staging, metadata, uploads, and collection management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "qbittorrent-api>=2024.1",
    "httpx[http2]>=0.27.0",
    "rich>=13.0",
    "pykakasi>=2.2.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "pathvalidate>=3.0",
    "rapidfuzz>=3.0",
    # P0 upgrades: Better retry logic and cross-platform paths
    "tenacity>=8.0",
    "platformdirs>=4.0",
    # P1 upgrades: Better subprocess handling and type-safe config
    "sh>=2.0",
    "pydantic-settings>=2.0",
    # CLI framework: Typer with Rich integration
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.5.0",
    "mypy",
    "types-PyYAML",
    "pre-commit>=3.0",
]
tui = [
    "prompt_toolkit>=3.0.0",
    "pygments>=2.0.0",
    "textual>=0.89.0",
]

[project.scripts]
shelfr = "shelfr.cli:main"
mamfast = "shelfr.cli:main"  # Deprecated alias

[tool.hatch.build.targets.wheel]
packages = ["src/shelfr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "pykakasi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prompt_toolkit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygments.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["shelfr.tui.*", "shelfr.utils.mini_editor"]
# These modules use optional dependencies (textual, prompt_toolkit, pygments)
# that may not be installed. The try/except import pattern causes no-redef errors
# when deps are installed locally, and subclassing-any errors when they're not.
# Ignore errors for these files since they're well-tested and optional.
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
# Relax type checking entirely for tests so development can proceed quickly.
# Tests can still be annotated incrementally where useful, but we don't require
# strict mypy checks across tests in local dev.
ignore_errors = true
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
